Display's Product ID instead of name

--- a/Views/Orders/Details.cshtml
+++ b/Views/Orders/Details.cshtml
@@ -30,7 +30,7 @@
     <table class="table table-bordered">
         <thead class="table-light">
         <tr>
-            <th>Product</th>
+            <th>Product ID</th>
             <th>Quantity</th>
         </tr>
         </thead>
@@ -38,7 +38,7 @@
         @foreach (var item in Model.OrderItems)
         {
             <tr>
-                <td>@(item.Product?.Product_Name ?? "Unknown Product")</td>
+                <td>@item.OrderItemId</td>
                 <td>@item.Quantity</td>
             </tr>
         }
